# FZProjects

./: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake.clean  cmake_install.cmake  nohup.out  tags
include/: hello.h  log.h  server.h  tags
src/: build  log.cpp  myfork.c  run  server.cpp  testlog.cpp
