project(hellomake)
cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_COMPILER g++)
set(CMAKE_VERBOSE_MAKEFILE ON)
#aux_source_directory(./src)
include_directories(./include)
#add_library(log STATIC ./src/log.cpp)
link_libraries("/root/myproject/liblog.a")
#target_link_libraries(hellomake log)
add_executable(./bin/hellomake ./src/testlog.cpp)
