project(hellomake)
cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_COMPILER g++)
set(CMAKE_VERBOSE_MAKEFILE ON)
#aux_source_directory(./src)
include_directories(./include)
add_library(log STATIC ./src/log.cpp)
find_library(LOG log .)
link_libraries(log)
add_executable(./bin/hellomake ./src/testlog.cpp)
target_link_libraries(./bin/hellomake /root/myproject/liblog.a)
